adding snapshot scheduler playbook and automation for it

--- a/roles/instance-scheduler/files/ec2.ini
+++ b/roles/instance-scheduler/files/ec2.ini
@@ -2,7 +2,6 @@
 #
 
 [ec2]
-
 # to talk to a private eucalyptus instance uncomment these lines
 # and edit edit eucalyptus_host to be the host name of your cloud controller
 #eucalyptus = True
@@ -50,7 +49,7 @@ route53 = False
 
 # By default, only EC2 instances in the 'running' state are returned. Set
 # 'all_instances' to True to return all instances regardless of state.
-all_instances = False
+all_instances = True
 
 # By default, only RDS instances in the 'available' state are returned.  Set
 # 'all_rds_instances' to True return all RDS instances regardless of state.
