--- a/roles/instance-scheduler/tasks/main.yml
+++ b/roles/instance-scheduler/tasks/main.yml
@@ -1,19 +1,26 @@
 ---
 # tasks file for instance-scheduler
 - name: Install the latest version of pip Ubuntu
-  apt: name=$item state=latest
-  with_items:
-   - python-pip
+  apt: name=python-pip state=latest
+  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+
+- name: Install the latest version of postfix Ubuntu
+  apt: name=postfix state=latest
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
 
 - name: Install the latest version of pip RedHat
-  yum: name=$item state=latest
-  with_items:
-   - python-pip
+  yum: name= python-pip state=latest
+  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux' or ansible_distribution == 'Amazon Linux'
+
+- name: Install the latest version of postfix RedHat
+  yum: name=postfix state=latest
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux' or ansible_distribution == 'Amazon Linux'
 
 - name: Install Ansible using Pip
   pip: name=ansible state=latest
+
+- name: Install Ansible using Pip
+  pip: name=boto state=latest
 
 - name: Install Crowrap using pip
   pip: name=cronwrap state=latest
@@ -27,8 +34,14 @@
 - name: copy the ec2.py file and rename to hosts to we can use ut dynamically
   copy: src=ec2.py dest=/etc/ansible/hosts mode=0755
 
-- name: copy the playbook
-  copy: name=instance-scheduler.yml dest=/opt/instance-scheduler.yml
+- name: copy the playbook for stopping and starting instances
+  copy: src=instance-scheduler.yml dest=/opt/instance-scheduler.yml
 
-- name: Create the cron entry for the daily job
-  cron: name="Run Instance Scheduler daily at 7 PM" minute="0" hour="19" job="cronwrap -c 'ansible-playbook -e scheduled_instances=tag_schedule_daily /opt/playbooks/instance-scheduler.yml > /var/log/scheduler.log 2>&1"
+- name: copy the playbook for snapshots of ebs volumes
+  copy: src=instance-scheduler.yml dest=/opt/instance-scheduler.yml
+
+- name: Create the cron entry for the daily job to stop instances
+  cron: name="Run Instance Scheduler daily at 7 PM" minute="0" hour="19" job="cronwrap -c 'ansible-playbook -e scheduled_instances=tag_schedule_daily -e instance_state=stopped /opt/instance-scheduler.yml' > /var/log/scheduler.log 2>&1"
+
+- name: Create the cron entry for the daily job to start instances
+  cron: name="Run Instance Scheduler daily at 7 AM" minute="0" hour="7" job="cronwrap -c 'ansible-playbook -e scheduled_instances=tag_schedule_daily -e instance_state=running /opt/instance-scheduler.yml' > /var/log/scheduler.log 2>&1"
